--- a/src/components/content/secondary-feature-svelte-consulting.njk
+++ b/src/components/content/secondary-feature-svelte-consulting.njk
@@ -1,9 +1,9 @@
 {% from "secondary-feature.njk" import secondaryFeature %}
 {%
   set 'content' = {
-  "image": "/assets/images/authors/paoloricciuti.jpg",
+  "image": "/assets/images/team/paolo.jpg",
   "alt": "Paolo Ricciuti",
   "loading": "lazy"
   }
 %}
-{{ secondaryFeature(content, 'split-content__author') }}
+{{ secondaryFeature(content, 'split-content__author secondary-feature__image-square') }}
