add contactType: "sales" to schema data

--- a/src/components/layouts/base.njk
+++ b/src/components/layouts/base.njk
@@ -26,10 +26,12 @@ meta:
       addressCountry: Germany
     contactPoint:
       - telephone: "+498945213903"
+        contactType: "sales"
         availableLanguage:
           - English
           - German
       - email: info@mainmatter.com
+        contactType: "sales"
         availableLanguage:
           - English
           - German
