fix writing in llms.txt

--- a/src/llms.njk
+++ b/src/llms.njk
@@ -19,7 +19,7 @@ Mainmatter bring their experience in efficient, modern digital product developme
 
 ## Trainings Catalog
 
-We offer a range of trainings Rust, Wasm, Svelte, Ember.js, Git, as well as general digital product development topics.
+We offer a range of trainings in Rust, Wasm, Svelte, Ember.js, Git, as well as general digital product development topics.
 
 {% for workshop in collections.workshops -%}
 [{{workshop.data.title}}](/services/workshops/{{workshop.fileSlug}})
