forward service name

--- a/src/components/global/meta.njk
+++ b/src/components/global/meta.njk
@@ -80,7 +80,8 @@
     "description": pageDesc,
     "organization": meta.organization,
     "published": meta.published,
-    "serviceType": meta.serviceType
+    "serviceType": meta.serviceType,
+    "name": meta.name
   }
 %}
 {% jsonLdScript schemaMeta, type, tags %}
