--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -34,7 +34,7 @@ og:
 %}
 {%
   set 'content' = {
-  "title": "Accelerate your Rust projects!",
+  "title": "Accelerate Your Rust Projects!",
   "text": "On paper, Rust checks all the boxes—performance, efficiency, maintainability, and great developer experience. But it takes time (and a few mistakes) to realize those benefits.  That’s where Mainmatter comes in—our experts join your team to accelerate your efforts and minimize execution risk. Together, we can take your Rust projects to the next level.",
   "loading": "eager",
   "containerType": "lp",
@@ -68,12 +68,12 @@ og:
   }
 %}
 {% set technologies = [tech_1, tech_2, tech_3] %}
-{{ serviceCards('services', 'What we do best', technologies) }}
+{{ serviceCards('services', 'What We Do Best', technologies) }}
 
 <section class="py-7 background-aqua">
   <div class="container container--lg p-2 p-3 background-white" id="team">
     <div class="split-content no-link m-0">
-      <h1 class="mb-2">We are Rust experts</h1>
+      <h1 class="mb-2">We Are Rust Experts</h1>
       <div class="split-content__wrapper">
         <div class="split-content__content m-0">
           <p class="medium">
@@ -115,7 +115,7 @@ og:
 
 <section class="mt-7 mb-5" id="successes">
   <div class="container container--lg mb-6">
-    <h1>Success stories</h1>
+    <h1>Success Stories</h1>
     {%
       set 'content' = {
       "text": "Working with Mainmatter's experts has been a great experience. They helped us develop a state-of-the-art data pipeline, mentored our internal team and introduced several improvements around our Rust code and infrastructure along the way.”",
@@ -169,7 +169,7 @@ og:
 
 <section class="container container--lg opensource-list py-7 image-max-width-32" id="open-source">
   <div class="">
-    <h1 class="opensource-list__title">You might like...</h1>
+    <h1 class="opensource-list__title">You Might Like...</h1>
     <ul class="opensource-list__list opensource-list__list-redesigned">
       <li class="opensource-list__project">
         <div>
