update(blog post link)

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -208,7 +208,7 @@ og:
           {%
             set link = {
             "label": 'Read blog post',
-            "url": 'https://github.com/mainmatter/100-exercises-to-learn-rust'
+            "url": '/blog/2025/02/13/eserde/'
             }
           %}
           {{ btnSecondary( link, 'link-purple' ) }}
