--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -26,10 +26,10 @@ og:
 
 {%
   set toc = {
-    'What we do best': '#services',
-    'Our team': '#team',
-    'Success stories': '#successes',
-    'Let’s talk': '#contact'
+    'What We Do Best': '#services',
+    'Our Team': '#team',
+    'Success Stories': '#successes',
+    'Let’s Talk': '#contact'
   }
 %}
 {%
