capitalize(Let's Talk headline)

--- a/src/components/contact-form-LP.njk
+++ b/src/components/contact-form-LP.njk
@@ -4,7 +4,7 @@
 <section class="contact-form color-hero color-hero--purple" data-background-color="purple">
   <div class="contact-form__container">
     <div class="contact-form__main container container--lg pt-7 pb-10">
-      <h1 class="contact-form__heading" id="contact">Let’s talk!</h1>
+      <h1 class="contact-form__heading" id="contact">Let’s Talk!</h1>
       <p class="medium">
         Let's talk about the challenges you're facing. Our experts are ready to guide you through
         your next big&nbsp;move.
