--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -107,7 +107,7 @@ og:
       "sizesArray": [760, 1440, 1920],
       "aspectRatioDesktop": "32/6",
       "linkUrl": "#contact",
-      "linkText": "Let's talk"
+      "linkText": "Let's Talk"
     }
   %}
   {{ imageAspectRatioWithButton(content) }}
