capitalize(you might like links)

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -207,7 +207,7 @@ og:
         <div class="opensource-list__project-link">
           {%
             set link = {
-            "label": 'Read blog post',
+            "label": 'Read Blog Post',
             "url": '/blog/2025/02/13/eserde/'
             }
           %}
@@ -229,7 +229,7 @@ og:
         <div class="opensource-list__project-link">
           {%
             set link = {
-            "label": 'Download handbook',
+            "label": 'Download Handbook',
             "url": 'https://github.com/mainmatter/cargo-autoinherit'
             }
           %}
