--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -25,15 +25,15 @@ og:
 
 {%
   set toc = {
-    'What we do best': '#services',
-    'Our team': '#team',
-    'Success stories': '#successes',
-    'Let’s talk': '#contact'
+    'What We Do Best': '#services',
+    'Our Team': '#team',
+    'Success Stories': '#successes',
+    'Let’s Talk': '#contact'
   }
 %}
 {%
   set 'content' = {
-  "title": "Accelerate your Svelte projects!",
+  "title": "Accelerate Your Svelte Projects!",
   "text": "Svelte combines a leading developer experience with performance and maintainability. But in order to effectively utilize its full potential, nothing beats experience. That’s where Mainmatter comes in—our experts join your team to accelerate your efforts and minimize execution risk.",
   "loading": "eager",
   "containerType": "lp",
@@ -100,7 +100,7 @@ og:
       "sizesArray": [760, 1440, 1920],
       "aspectRatioDesktop": "32/6",
       "linkUrl": "#contact",
-      "linkText": "Let's talk"
+      "linkText": "Let's Talk"
     }
   %}
   {{ imageAspectRatioWithButton(content) }}
