update(logo list)

--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -123,13 +123,15 @@ og:
   </div>
   {%
     set logoCompanies = [
-    'Aleph Alpha',
-    'Google',
-    'KISTERS',
+    'Timify',
     'BMW Car IT',
-    'Faculty',
-    'Otto',
-    'Redis'
+    'Qonto',
+    'Trainline',
+    'Redis',
+    'Aleph Alpha',
+    'Auditboard',
+    'Experteer',
+    'Rail Europe'
     ]
   %}
   {{ logoList(logoCompanies) }}
