--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -76,10 +76,9 @@ og:
       <div class="split-content__wrapper">
         <div class="split-content__content m-0">
           <p class="medium">
-            Our team is led by Paolo Ricciuti, Svelte maintainer 
-            and co-author of SvelteLab. Mainmatter is the steward 
-            of the Svelte Custom Renderers initiative, an active contributor 
-            to a number of open source projects and co-organizer of Svelte Summit. 
+            Our team is led by Paolo Ricciuti, Svelte maintainer and co-author of SvelteLab.
+            Mainmatter is the steward of the Svelte Custom Renderers initiative, an active
+            contributor to a number of open source projects and co-organizer of Svelte Summit.
           </p>
         </div>
         <div class="split-content__feature">
@@ -111,7 +110,6 @@ og:
     <h1>Our Success Stories</h1>
   </div>
   <div class="container container--lg mb-6">
-
     {%
       set link = {
       "label": 'Modernizing and rebuilding Rail Europe’s B2C platform',
@@ -119,7 +117,6 @@ og:
       }
     %}
     {{ btnSecondary( link, 'mt-2' ) }}
-
   </div>
   {%
     set logoCompanies = [
@@ -146,10 +143,7 @@ og:
       <li class="opensource-list__project">
         <div>
           <div class="opensource-list__project-image">
-            <img
-              src="/assets/images/svelte/svelte-custom-renderers.webp"
-              alt="Custom Renderers"
-            />
+            <img src="/assets/images/svelte/svelte-custom-renderers.webp" alt="Custom Renderers" />
           </div>
           <div class="opensource-list__project-text">
             <h4 class="mb-015 medium">Support Mainmatter’s Svelte Custom Renderers project</h4>
@@ -171,9 +165,7 @@ og:
             <img src="/assets/images/svelte/svelte-blog-post.webp" alt="Svelte" />
           </div>
           <div class="opensource-list__project-text">
-            <h4 class="mb-015 medium">
-              Blog post: Runes and Global state do’s and don’ts
-            </h4>
+            <h4 class="mb-015 medium">Blog post: Runes and Global state do’s and don’ts</h4>
           </div>
         </div>
         <div class="opensource-list__project-link">
@@ -189,10 +181,7 @@ og:
       <li class="opensource-list__project">
         <div>
           <div class="opensource-list__project-image">
-            <img
-              src="/assets/images/svelte/svelte-radio.webp"
-              alt="Svelte Radio"
-            />
+            <img src="/assets/images/svelte/svelte-radio.webp" alt="Svelte Radio" />
           </div>
           <div class="opensource-list__project-text">
             <h4 class="mb-015 medium">Paolo discusses Custom Renderers with Svelte Radio</h4>
