capitalize(You Might Like links)

--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -152,7 +152,7 @@ og:
         <div class="opensource-list__project-link">
           {%
             set link = {
-            "label": 'Learn more',
+            "label": 'Learn More',
             "url": 'https://svelte-custom-renderers.com/?utm_source=mainmatter.com'
             }
           %}
@@ -171,7 +171,7 @@ og:
         <div class="opensource-list__project-link">
           {%
             set link = {
-            "label": 'Read blog post',
+            "label": 'Read Blog Post',
             "url": '/blog/2025/03/11/global-state-in-svelte-5/'
             }
           %}
