--- a/src/ember-consulting.njk
+++ b/src/ember-consulting.njk
@@ -199,7 +199,7 @@ og:
           </div>
           <div class="opensource-list__project-text">
             <h4 class="mb-015 medium">
-              Blog post: Bridging frameworks - Running React in an Ember.JS app
+              Blog post: Bridging frameworks: Running React in an Ember.JS app
             </h4>
           </div>
         </div>
