update(logo list)

--- a/src/ember-consulting.njk
+++ b/src/ember-consulting.njk
@@ -152,13 +152,20 @@ og:
   </div>
   {%
     set logoCompanies = [
-    'Aleph Alpha',
-    'Google',
-    'KISTERS',
-    'BMW Car IT',
-    'Faculty',
-    'Otto',
-    'Redis'
+    'Qonto',
+    'Trainline',
+    'Cardstack',
+    'Sage',
+    'Auditboard',
+    'Timify',
+    'Robin Hood',
+    'Terminal49',
+    'MVB',
+    'Generali',
+    'Medify',
+    'CLARK',
+    'Phorest',
+    'WePlan'
     ]
   %}
   {{ logoList(logoCompanies) }}
