--- a/src/ember-consulting.njk
+++ b/src/ember-consulting.njk
@@ -11,7 +11,6 @@ og:
   image: /assets/images/ember/og-image.png
 ---
 
-
 {% from "image-banner-with-text.njk" import imageBannerWithText %}
 {% from "service-cards.njk" import serviceCards %}
 {% from "recent-posts.njk" import recentPosts %}
@@ -78,13 +77,17 @@ og:
       <div class="split-content__wrapper">
         <div class="split-content__content m-0">
           <p class="medium">
-            Mainmatter has been actively involved in shaping Ember for years.
-            We’re behind <a href="/ember-initiative/" class="link-black">The Ember Initiative</a> that supports the Ember ecosystem.
-            We also maintain key add-ons such as  <a href="https://ember-simple-auth.com/" class="link-black">Ember Simple Auth</a>, <a href="http://qunit-dom.com/" class="link-black">QUnit Dom</a>, and <a href="https://ember-test-selectors.com" class="link-black">Ember Test Selectors</a>. 
+            Mainmatter has been actively involved in shaping Ember for years. We’re behind
+            <a href="/ember-initiative/" class="link-black">The Ember Initiative</a> that supports
+            the Ember ecosystem. We also maintain key add-ons such as
+            <a href="https://ember-simple-auth.com/" class="link-black">Ember Simple Auth</a>,
+            <a href="http://qunit-dom.com/" class="link-black">QUnit Dom</a>, and
+            <a href="https://ember-test-selectors.com" class="link-black">Ember Test Selectors</a>.
           </p>
           <p class="medium">
-            Our team includes many experienced engineers, including Chris Manson (Ember Core Team member, 
-            Ember Initiative lead), Nick Schot (long-time open-source contributor) and Marine Dunstetter (Ember Initiative team member).
+            Our team includes many experienced engineers, including Chris Manson (Ember Core Team
+            member, Ember Initiative lead), Nick Schot (long-time open-source contributor) and
+            Marine Dunstetter (Ember Initiative team member).
           </p>
         </div>
         <div class="split-content__feature">
@@ -148,7 +151,6 @@ og:
       }
     %}
     {{ btnSecondary( link, 'mt-2' ) }}
-
   </div>
   {%
     set logoCompanies = [
@@ -180,10 +182,7 @@ og:
       <li class="opensource-list__project">
         <div>
           <div class="opensource-list__project-image">
-            <img
-              src="/assets/images/ember/ember-initiative.webp"
-              alt="Ember Initiative"
-            />
+            <img src="/assets/images/ember/ember-initiative.webp" alt="Ember Initiative" />
           </div>
           <div class="opensource-list__project-text">
             <h4 class="mb-015 medium">Learn more about Mainmatter’s Ember Initiative</h4>
@@ -229,7 +228,9 @@ og:
             />
           </div>
           <div class="opensource-list__project-text">
-            <h4 class="mb-015 medium">Chris and Marine talk about Ember’s future at EmberFest 2025</h4>
+            <h4 class="mb-015 medium">
+              Chris and Marine talk about Ember’s future at EmberFest 2025
+            </h4>
           </div>
         </div>
         <div class="opensource-list__project-link">
