add(btn--large)

--- a/src/components/image-aspect-ratio-with-button.njk
+++ b/src/components/image-aspect-ratio-with-button.njk
@@ -11,7 +11,7 @@
           "url": content.linkUrl
           }
         %}
-        {{ btnPrimary( link, 'white', 'mt-2' ) }}
+        {{ btnPrimary( link, 'white', 'btn-primary--large mt-2' ) }}
       {% endif %}
     </div>
     <div class="image-aspect-ratio-with-button__image">
