--- a/src/assets/css/base/_buttons-links.scss
+++ b/src/assets/css/base/_buttons-links.scss
@@ -23,6 +23,18 @@ p a {
     --icon-arrow-transform: translate3d(0.5rem, 0, 0);
   }
 
+  &--large {
+    padding: 1.5rem 2.63rem;
+    --icon-arrow-margin: 0 0 0 0.75rem;
+    --icon-arrow-size: 1.5rem;
+    font-size: 2.25rem;
+
+    &:hover,
+    &:focus {
+      --icon-arrow-transform: translate3d(0.75rem, 0, 0);
+    }
+  }
+
   &--purple {
     background-color: var(--color-purple);
   }
