--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -44,7 +44,7 @@ og:
 
 {%
   set 'tech_1' = {
-  "title": "Svelte 5 Migration",
+  "title": "Svelte 5 Migrations",
   "text": "We migrate your project incrementally, improving capability, speed, and maintainability without interrupting ongoing product development.",
   "label": "Learn more",
   "link": "#successes"
