--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -77,7 +77,7 @@ og:
         <div class="split-content__content m-0">
           <p class="medium">
             Our team is led by Paolo Ricciuti, Svelte maintainer and co-author of SvelteLab.
-            Mainmatter is the steward of the Svelte Custom Renderers initiative, an active
+            Mainmatter is also the driving force behind the a <href="https://svelte-custom-renderers.com">Svelte Custom Renderers initiative</a>, an active
             contributor to a number of open source projects and co-organizer of Svelte Summit.
           </p>
         </div>
