--- a/src/svelte-consulting.njk
+++ b/src/svelte-consulting.njk
@@ -77,8 +77,10 @@ og:
         <div class="split-content__content m-0">
           <p class="medium">
             Our team is led by Paolo Ricciuti, Svelte maintainer and co-author of SvelteLab.
-            Mainmatter is also the driving force behind the a <href="https://svelte-custom-renderers.com">Svelte Custom Renderers initiative</a>, an active
-            contributor to a number of open source projects and co-organizer of Svelte Summit.
+            Mainmatter is also the driving force behind the
+            <a href="https://svelte-custom-renderers.com">Svelte Custom Renderers initiative</a>, an
+            active contributor to a number of open source projects and co-organizer of Svelte
+            Summit.
           </p>
         </div>
         <div class="split-content__feature">
@@ -134,6 +136,7 @@ og:
   {{ logoList(logoCompanies) }}
 </section>
 
+{% set predefinedService = "Svelte" %}
 {% include 'contact-form-LP.njk' %}
 
 <section class="container container--lg opensource-list py-7 image-max-width-32" id="open-source">
